--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 
 <body class="bg-secondary">
-    <section class="main text-center pt-5" id="section">
+    <section class="main text-center pt-5 shadow-lg p-3 mb-5 bg-body rounded" id="section">
         <h1 class="p-3">To Do App</h1>
         <div class="upsection d-flex justify-content-center align-items-center gap-5" id="form">
-            <div class="d-flex justify-content-center align-items-center"><input type="text" id="newTask" class="fs-5" placeholder="Bir Todo Giriniz.">
+            <div class="d-flex justify-content-center align-items-center"><input type="text" id="newTask" class="fs-5" placeholder="Write to do here...">
                 <button id="addBtn" type="submit" class="btn btn-primary mt-0">Save</button></div>
-            <div  class="d-flex justify-content-center align-items-center"><input type="text" id="seacrhTask" class="fs-5" placeholder="Todo Arayınız.">
+            <div  class="d-flex justify-content-center align-items-center"><input type="text" id="seacrhTask" class="fs-5" placeholder="Search...">
                </div>
         </div>
         <div class="middle p-2" id="middlePart">
-            <table id="table" class="lh-base table table-striped table-list">
+            <table id="table" class="lh-base table table-striped table-list shadow-lg p-3 mb-5 bg-body rounded">
                 <thead id="thead" class="fs-3">
                     <tr>
                         <th>No.</th>
-                        <th>ToDo Item</th>
+                        <th>To Do</th>
                         <th>Status</th>
                         <th>Actions</th>
                     </tr>
